--- a/Stikprove.Api/Stikprove.Api.csproj
+++ b/Stikprove.Api/Stikprove.Api.csproj
@@ -111,9 +111,6 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="Thinktecture.IdentityModel">
-      <HintPath>..\packages\Thinktecture.IdentityModel.2.3.1\lib\net45\Thinktecture.IdentityModel.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AbstractApiController.cs" />
@@ -126,6 +123,7 @@
     <Compile Include="Models\Dto\AbstractDto.cs" />
     <Compile Include="Models\Dto\CompanyDto.cs" />
     <Compile Include="Models\Dto\TranslationDto.cs" />
+    <Compile Include="Models\Dto\UserCreationDto.cs" />
     <Compile Include="Models\Dto\UserDto.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Data\IRepositoryContext.cs" />
@@ -138,6 +136,7 @@
     <Compile Include="Models\Dto\UserRoleDto.cs" />
     <Compile Include="Models\IdentifiableEntities.cs" />
     <Compile Include="Models\IIdentifiable.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Modules\BasicAuthHttpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\StikproveEntities.Designer.cs">
@@ -145,6 +144,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Security\Crypto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -190,7 +190,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
