--- a/Stikprove.Tests/Stikprove.Tests.csproj
+++ b/Stikprove.Tests/Stikprove.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
     <Compile Include="Models\TestModels.cs" />
+    <Compile Include="Security\TestSecurity.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
