--- a/Stikprove.Api/Web.config
+++ b/Stikprove.Api/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -35,25 +35,6 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <!--<handlers>
-      <remove name="WebDAV"/>
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-    <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule" />
-    </modules>-->
-    <!--<modules>
-      <remove name="UrlRoutingModule-4.0" />
-      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
-      -->
-    <!-- any other modules you want to run in MVC e.g. FormsAuthentication, Roles etc. -->
-    <!--
-    </modules>-->
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" />
     </modules>
@@ -66,11 +47,26 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <!--<httpProtocol>
+      <customHeaders>
+        <clear/>
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Headers" value="Content-Type, X-Requested-With, origin, accept"/>
+      </customHeaders>
+    </httpProtocol>-->
   </system.webServer>
+  <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
+    <standardEndpoints>
+      <webScriptEndpoint>
+        <standardEndpoint name="" crossDomainScriptAccessEnabled="true"/>
+      </webScriptEndpoint>
+    </standardEndpoints>
+  </system.serviceModel>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="StikproveEntities" connectionString="metadata=res://*/Models.StikproveEntities.csdl|res://*/Models.StikproveEntities.ssdl|res://*/Models.StikproveEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SLAPTOP\SQLEXPRESS;initial catalog=Stikprove;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StikproveEntities" connectionString="metadata=res://*/Models.StikproveEntities.csdl|res://*/Models.StikproveEntities.ssdl|res://*/Models.StikproveEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SLAPTOP-WIN;initial catalog=Stikprove;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
