--- a/Stikprove.Api/packages.config
+++ b/Stikprove.Api/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="angularjs" version="1.0.4" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
@@ -12,5 +13,6 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.3" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.3.1" targetFramework="net45" />
 </packages>
